[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/tileset/Door.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/tileset/Door_open.png" type="Texture" id=2]
[ext_resource path="res://scripts/Door.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 24 )

[node name="Door" type="StaticBody2D"]
position = Vector2( 32, -24 )
script = ExtResource( 3 )

[node name="DoorSprite" type="Sprite" parent="."]
z_index = 50
texture = ExtResource( 1 )

[node name="DoorCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="DoorTop" type="Sprite" parent="."]
position = Vector2( 0, -24 )
z_index = 200
texture = ExtResource( 2 )
